--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="img/Ekran görüntüsü 2025-01-17 122132.png" alt="Profil Resmi">
             </div>
             <h1 class="kapak-baslik">WAEL ASSAD</h1>
-            <a class="kapak-altbaslik"><strong>Front End Developer</strong></a>
+            <a class="kapak-altbaslik"><strong>Front-End Developer</strong></a>
         </header>
 
         <!-- İçerik -->
