--- a/iletisim.html
+++ b/iletisim.html
@@ -34,8 +34,10 @@
                 <div class="profil-resmi">
                     <img src="img/Ekran görüntüsü 2025-01-17 122407.png" alt=" profil resmi">
                 </div>
+                 <h1>WAEL ASSAD</h1>
+                <a class="kapak-altbaslik"><strong>Front End Developer</strong></a>
             </div>
-
+<center>
             <div class="iletisim-bilgileri">
                 <h2>İletişim Bilgilerim</h2>
                 <ul>
@@ -61,7 +63,7 @@
                     </ul>
                 </div>
             </div>
-
+</center>
         </div>
     </div>
 </body>
