--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
                         <h3>Web Tabanlı Çeviri Sistemi</h3>
                         <p>HTML, CSS ve JavaScript kullanarak oluşturduğum bu web sitesi, kullanıcıların farklı diller arasında çeviri yapmasını sağlar.</p>
                     </div>
+                    <div class="calisma">
+                        <h3>Döviz Kurları ve Dönüştürme Sistemi</h3>
+                        <p>HTML, CSS ve JavaScript kullanarak geliştirdiğim bu web sitesi, kullanıcıların güncel döviz kurlarını görmesini ve farklı döviz birimleri arasında kolayca dönüşüm yapmasını sağlar. </p>
+                    </div>
                 </div>
             </div>
             <div class="sag-kolon">
