--- a/iletisim.html
+++ b/iletisim.html
@@ -35,7 +35,7 @@
                     <img src="img/Ekran görüntüsü 2025-01-17 122407.png" alt=" profil resmi">
                 </div>
                  <h1>WAEL ASSAD</h1>
-                <a class="kapak-altbaslik"><strong>Front End Developer</strong></a>
+                <a class="kapak-altbaslik"><strong>Front-End Developer</strong></a>
             </div>
 <center>
             <div class="iletisim-bilgileri">
