--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="tr">
 
 <head>
-  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2KK22B9FRV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2KK22B9FRV');
+</script>
 
     <title>Kişisel Blog- WAEL ASSAD</title>
     <link rel="icon" href="img/self-employed.png" type="image/png">
